package Entites.Equipements;

public enum TypeArme {
  COURANTE,
  GUERRE,
  DISTANCE
}
