package Personnage.Joueur;

import equipement.*;
import java.util.ArrayList;
import java.util.List;
import utils.De;

public class ClasseJoueur {
  private String m_nomClass;
  private int m_pv;
  private ArrayList<Arme> m_armes;
  private ArrayList<Armure> m_armures;

  private ClasseJoueur(String nom, int pv, ArrayList<Arme> armes, ArrayList<Armure> armures) {
    this.m_nomClass = nom;
    this.m_pv = pv;
    this.m_armes = armes;
    this.m_armures = armures;
  }

  public int getM_pv() {
    return m_pv;
  }

  public ArrayList<Arme> getM_armes() {
    return m_armes;
  }

  public ArrayList<Armure> getM_armures() {
    return m_armures;
  }

  public String getM_nomClass() {
    return m_nomClass;
  }

  public static ClasseJoueur Clercs() {
    return new ClasseJoueur(
        "Clercs",
        16,
        new ArrayList<>(List.of(
            new Arme(TypeArme.COURANTE, "masse d'armes", new De(1, 6), 1,-1,-1),
            new Arme(TypeArme.COURANTE, "arbalète légère", new De(1, 8), 16,-1,-1)
        )),
        new ArrayList<>(List.of(
            new Armure(TypeArmure.LEGERE, "armure d'écailles", 9,-1,-1)
        ))
    );
  }
  public static ClasseJoueur Guerriers() {
    return new ClasseJoueur(
        "Guerriers",
        20,
        new ArrayList<>(List.of(
            new Arme(TypeArme.GUERRE, "épée longue", new De(1, 8), 1,-1,-1),
            new Arme(TypeArme.COURANTE, "arbalète légère", new De(1, 8), 16,-1,-1)
        )),
        new ArrayList<>(List.of(
            new Armure(TypeArmure.LOURDE, "cotte de mailles", 11,-1,-1)
        ))
    );
  }
  public static ClasseJoueur Magiciens() {
    return new ClasseJoueur(
        "Magiciens",
        12,
        new ArrayList<>(List.of(
            new Arme(TypeArme.COURANTE, "bâton", new De(1, 6), 1,-1,-1),
            new Arme(TypeArme.COURANTE, "fronde", new De(1, 4), 6,-1,-1)
        )),
        new ArrayList<>(List.of())
    );
  }
  public static ClasseJoueur Roublards() {
    return new ClasseJoueur(
        "Roublards",
        16,
        new ArrayList<>(List.of(
            new Arme(TypeArme.GUERRE, "rapière", new De(1, 8), 1,-1,-1),
            new Arme(TypeArme.COURANTE, "arc court", new De(1, 6), 16,-1,-1)
        )),
        new ArrayList<>(List.of())
    );
  }
  @Override
  public String toString() {
    return "ClassePersonnage{" +
        "nom='" + m_nomClass + '\'' +
        ", pv=" + m_pv +
        ", armes=" + m_armes +
        ", armures=" + m_armures +
        '}';
  }


}
