package equipement;

public enum TypeArmure {
  LEGERE,
  LOURDE
}


